# terra-rara

./: .gitignore  Bakır Fiyat Tahmini_ XGBoost ve Alternatifler.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt  supervisord.conf
backend/adapters/: __init__.py
backend/adapters/db/: lock.py  (+1 more)
backend/app/: __init__.py  ai_engine.py  async_bridge.py  commentary.py  data_manager.py  db.py  features.py  heatmap.py  inference.py  inspect_db.py  instruments.py  lock.py  main.py  models.py  openrouter_client.py  quality_gate.py  rss_ingest.py  scheduler.py  schemas.py  seed_db.py  settings.py  stepfun_probe.py  utils.py
backend/backtest/: __init__.py  runner.py
backend/config/: screener_config.yaml
backend/deep_learning/: __init__.py  config.py  contract.py  logging_utils.py
backend/migrations/: 001_add_news_raw_processed.sql  002_sentiment_v2.sql
backend/pipelines/: __init__.py  cutoff.py  market_calendar.py
backend/screener/: __init__.py  __main__.py
backend/scripts/: backfill_market_dates.py  tft_quality_gate.py
backend/tests/: __init__.py  conftest.py  test_ai_engine.py  test_api.py  test_commentary.py  test_data_ingestion.py  test_db_migrations.py  test_features.py  test_inference.py  test_instruments.py  test_normalization.py  test_openrouter_client.py  test_quality_gate.py  test_quality_gate_weekly.py  test_sentiment_aggregation.py  test_settings_security.py  test_tft_quality_gate_script.py  test_utils_dedup.py
backend/worker/: __init__.py  runner.py  tasks.py
(+202 files in other folders)
